fixes and improvements

--- a/example.env
+++ b/example.env
@@ -6,4 +6,8 @@ JWT_SECRET='super-secret-123'
 JWT_EXP='3600'
 JWT_AUD='audience'
 
+RATE_LIMIT_WINDOW_MS='1000 * 60 * 15'
+RATE_LIMIT_AUTH='5'
+RATE_LIMIT_API='500'
+
 DATABASE_URL='url-to-db'
