--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@t3-oss/env-core": "^0.13.4",
         "hono": "^4.7.10",
+        "hono-pino": "^0.8.0",
         "hono-rate-limiter": "^0.4.2",
         "zod": "^3.25.17"
     },
