--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
     },
     "dependencies": {
         "@t3-oss/env-core": "^0.13.4",
+        "drizzle-orm": "^0.43.1",
         "hono": "^4.7.10",
         "hono-pino": "^0.8.0",
         "hono-rate-limiter": "^0.4.2",
+        "pg": "^8.16.0",
+        "pino": "^9.7.0",
         "zod": "^3.25.17"
     },
     "devDependencies": {
-        "@types/bun": "latest"
+        "@types/bun": "latest",
+        "@types/pg": "^8.15.2",
+        "drizzle-kit": "^0.31.1",
+        "pino-pretty": "^13.0.0"
     }
 }
