--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "name": "hono-api",
     "scripts": {
-        "dev": "bun run --hot src/index.ts"
+        "dev": "bun run --hot src/index.ts",
+        "lint": "eslint src",
+        "lint:fix": "eslint src --fix"
     },
     "dependencies": {
         "@t3-oss/env-core": "^0.13.4",
@@ -14,9 +16,11 @@
         "zod": "^3.25.17"
     },
     "devDependencies": {
+        "@evix-oss/eslint-config": "^1.0.3",
         "@types/bun": "latest",
         "@types/pg": "^8.15.2",
         "drizzle-kit": "^0.31.1",
+        "eslint": "^9.27.0",
         "pino-pretty": "^13.0.0"
     }
 }
